
-Optimized plugin system user experience (error checks / correcting on primary configs, classes accessible from other plugins)

-"dynamic-config-only.php" added to the main directory (now houses the dynamic configs used for POW mining calculators, etc)

-Added admin / docs interface templates system for plugins (see /DOCUMENTATION-ETC/PLUGINS-README.txt)

-Code cleanup / housekeeping

-v6.00.16 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.15 OR LOWER.

-v6.00.8 AND HIGHER MIGRATES / UPGRADES ANY SET COOKIE DATA TO A MORE SECURE / RELIABLE FORMAT, ONE-TIME DURING UPGRADES FROM V6.00.7 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.19:

-BUG FIX: Fixed issue with system resource alerts not sending messages by Telegram / phone text

-BUG FIX: Fixed issue with activation of proxies crashing the app

-BUG FIX: Miscellaneous (small) fixes

-New settings for adjusting font sizes (default size in admin config GENERAL section / user-adjustable size at top of new side bar)

-New upgrades to the page templates system, to a RESPONSIVE layout (auto-adjusts to ANY screen size, including mobile / tablet)

-New config setting for using ANY google font ( https://fonts.google.com ) as the interface font

-Miscellaneous user experience improvements

-Added Twilio texting (SMS) API support

-Optimized default configuration

-Code cleanup / optimization

-Upgraded to jQuery v3.6.3

-Upgraded to BootStrap v5

-Upgraded TextLocal API

-Revised documentation

-New debugging modes

-v6.00.19 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.18 OR LOWER.

-v6.00.8 AND HIGHER MIGRATES / UPGRADES ANY SET COOKIE DATA TO A MORE SECURE / RELIABLE FORMAT, ONE-TIME DURING UPGRADES FROM V6.00.7 OR LOWER.

-------------------------------------------------------------------








